# collision-benchmark

./: CMakeLists.txt  README.md  TODO.md
backups/: SimpleTest.md
cmake/: Findtinyxml.cmake  SearchForStuff.cmake
collision_benchmark/: BasicTypes.hh  BoostSerialization.hh  ClientGui.cc  ClientGui.hh  ContactInfo.hh  ControlServer.hh  Exception.hh  GazeboControlServer.cc  GazeboControlServer.hh  GazeboHelpers.cc  GazeboHelpers.hh  GazeboMirrorWorld.cc  GazeboMirrorWorld.hh  GazeboModelLoader.hh  GazeboMultipleWorlds.cc  GazeboMultipleWorlds.hh  GazeboMultipleWorldsServer.cc  GazeboMultipleWorldsServer.hh  GazeboPhysicsWorld.cc  GazeboPhysicsWorld.hh  GazeboStateCompare.cc  GazeboStateCompare.hh  GazeboTopicForwarder.cc  GazeboTopicForwarder.hh  GazeboTopicForwardingMirror.cc  GazeboTopicForwardingMirror.hh  GazeboWorldLoader.cc  GazeboWorldLoader.hh  GazeboWorldState.cc  GazeboWorldState.hh  Helpers.cc  Helpers.hh  MathHelpers-inl.hh  MathHelpers.hh  MeshData-inl.hh  MeshData.hh  MeshHelper.hh  MeshShapeGenerationVtk.cc  MeshShapeGenerationVtk.hh  MeshShapeGenerator.hh  (+30 more)
collision_benchmark/CodeVault/: GazeboMirrorWorld.cc  GazeboMirrorWorld.hh  GetStatesFromMessages  README.md
patches/: fcl-0.5-213.patch.diff  gazebo-patch-pr-2709.patch.diff  gazebo-transport-patch-pr-2657.patch.diff
physics_settings/: README.md  bullet_default.sdf  dart_default.sdf  simbody_default.sdf
test/: BasicTestFramework.hh  BoostSerialization.hh  CMakeLists.txt  CollidingShapesConfiguration.hh  CollidingShapesGui.cc  CollidingShapesGui.hh  CollidingShapesParams.cc  CollidingShapesParams.hh  CollidingShapesTestFramework.cc  CollidingShapesTestFramework.hh  ContactsFlickerTestFramework.cc  ContactsFlickerTestFramework.hh  ContactsFlicker_TEST.cc  MultipleWorldsTestFramework.cc  MultipleWorldsTestFramework.hh  MultipleWorlds_TEST.cc  StaticTestFramework.cc  StaticTestFramework.hh  Static_TEST.cc  StepGui.cc  StepGui.hh  Temp_TEST.cc  TestUtils.cc  TestUtils.hh  WorldInterface_TEST.cc  colliding_shapes_test.cc
test/msgs/: colliding_shapes.proto
test_files/: contact.world  test_movable.world  test_step1.world  test_step2.world  test_step3.world
test_files/triangle/: model.config  model.sdf  triangle.mtl
test_worlds/: cube.world  cube_bullet.world  cube_dart.world  cube_ode.world  empty_bullet.world  empty_dart.world  empty_ode.world  empty_simbody.world  ode_physics.sdf  sphere.sdf  sphere_bullet.world  sphere_dart.world  sphere_ode.world  void.world
tools/: code_check.sh
tutorials/: CMakeLists.txt  gtest_TEST.cc  multiple_worlds_server.cc  transfer_world_state.cc
vtk-test/: CMakeLists.txt  test_primitives.cc
